# ImageDownloader

./: .gitignore  WBS.md
Image Downloader/: CMakeLists.txt  main.cpp
Image Downloader/Browser/: Image.h
Image Downloader/Downloader/: Downloader.cpp
Image Downloader/Errors/: Error.cpp  Error.h
Image Downloader/Request/: Request.cpp
ImageDownloader/: CMakeLists.txt  build_ubuntu  build_windows.bat
ImageDownloader/Browser/: Browser.cpp  Browser.h  Image.cpp
ImageDownloader/Downloader/: Downloader.h
ImageDownloader/Errors/: Error.cpp
ImageDownloader/Request/: Request.h
ImageDownloader/TCPSocket/: TCPSocket.cpp  TCPSocket.h
ImageDownloader/data/: qml.qrc
ImageDownloader/data/qml/: main.qml
ImageDownloader/data/qml/Components/: ControlButton.qml  MainMenu.qml  RoundButton.qml  Wallpaper.qml
ImageDownloader/src/: main.cpp
ImageDownloader/src/Browser/: Browser.cpp  Browser.h  Image.cpp
ImageDownloader/src/Downloader/: Downloader.cpp  Downloader.h
ImageDownloader/src/Errors/: Error.cpp  Error.h
ImageDownloader/src/Request/: Request.cpp  Request.h
ImageDownloader/src/TCPSocket/: TCPSocket.cpp  TCPSocket.h
